--- a/src/components/pages/EmployeesPage/ToolBar/ToolBar.module.css
+++ b/src/components/pages/EmployeesPage/ToolBar/ToolBar.module.css
@@ -15,3 +15,9 @@
     align-items: center;
     justify-content: center;
 }
+
+@media screen and (max-width: 551px) {
+    .newUser {
+        display: none;
+    }
+}
