--- a/src/components/pages/EmployeesPage/EmployeesList/RowHeader/RowHeader.module.css
+++ b/src/components/pages/EmployeesPage/EmployeesList/RowHeader/RowHeader.module.css
@@ -21,6 +21,11 @@
     gap: 0.5em;
 }
 
+.organizationField,
+.typeField{
+    justify-content: center;
+}
+
 @media screen and (max-width: 551px) {
     .header {
         display: none;
